<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/mainTb"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/design_default_color_primary"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:subtitleTextColor="@color/design_default_color_on_primary"
        app:titleTextColor="@color/design_default_color_on_primary" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/languageSelectionLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/mainTb"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fromLangTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="8dp"
            android:hint="@string/from_language"
            app:layout_constraintEnd_toStartOf="@id/arrowImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <AutoCompleteTextView
                android:id="@+id/fromLangMactv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/arrowImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:contentDescription="@string/change_language"
            android:src="@drawable/baseline_arrow_right_24"
            app:layout_constraintBottom_toBottomOf="@id/fromLangTil"
            app:layout_constraintStart_toEndOf="@id/fromLangTil"
            app:layout_constraintTop_toTopOf="@id/fromLangTil"
            app:layout_constraintVertical_bias="0.486" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/toLangTil"
            style="@style/Widget.Material3.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/to_language"
            app:layout_constraintStart_toEndOf="@id/arrowImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/fromLangTil">

            <AutoCompleteTextView
                android:id="@+id/toLangMactv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAccessibility="no"
                android:inputType="none"
                tools:ignore="LabelFor" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/inputTextTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/input_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/languageSelectionLayout"
        android:layout_marginTop="16dp">

        <EditText
            android:id="@+id/inputTextEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:minLines="3" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/translateBt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/translate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputTextTil"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outputTextTil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/translated_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/translateBt"
        android:layout_marginTop="16dp"
        android:visibility="gone">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/outputTextTiet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:inputType="textMultiLine"
            android:minLines="3"/>
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>